add pink noise generator; looks roughly ok

--- a/noise/CMakeLists.txt
+++ b/noise/CMakeLists.txt
@@ -3,4 +3,8 @@ project(dsp_kit)
 
 add_executable(test-noise
         lcg.c
+        pink.c
+        pink.h
         test-noise.c)
+
+target_link_libraries(test-noise sndfile)
