wip tapers, smoothing, busses

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,9 +11,8 @@ add_executable(test-fifo
         test/test-fifo.cpp
         Fifo.hpp)
 
-add_executable(test-smoothing
-        test/test-smoothing.cpp
-        Smoothing.hpp)
+#add_executable(test-smoothing
+#        test/test-smoothing.cpp)
 
 add_executable(test-envelope
         test/test-envelope.cpp
@@ -37,5 +36,13 @@ add_executable(test-dc-blocker
         DcBlocker.hpp)
 target_link_libraries(test-dc-blocker sndfile)
 
+add_executable(test-taper
+        test/test-taper.cpp
+        Taper.hpp
+        Taper.cpp)
+
+add_executable(test-audio-bus
+        test/test-audio-bus.cpp
+        AudioBus.hpp)
 
 add_subdirectory(noise)
