generate easing tables

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -41,7 +41,10 @@ add_executable(test-fast-mover
         test/test-fast-mover.cpp
         FastMover.cpp)
 
+add_executable(test-onepole-smoother
+        test/test-onepole-smoother.cpp)
+
 add_executable(gen-easing-tables
-        workbench/gen_easing_tables.cpp)
+        tools/gen_easing_tables.cpp)
 
 add_subdirectory(noise)
